[package]
name = "get-config"
description = "pull your dot configs from a version controlled gists"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
confy = "0.4.0"
inquire = "0.2.1"
anyhow = "1.0.56"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true